--- a/ambler-beer-email.html
+++ b/ambler-beer-email.html
@@ -79,13 +79,13 @@
     <span
         style="display:none !important;visibility:hidden;mso-hide:all;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">
         &nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;</span>
-    <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0 align=" center"=""
-        style="font-family: 'Lato', sans-serif, Arial, Helvitica;max-width: 600px; background-color: #48799d; "
+    <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0"
+        style="font-family: 'Lato', sans-serif, Arial, Helvitica; max-width: 600px; background-color:#48799d;"
         role="presentation">
         <tr>
             <td align="center" style="padding: 20px 0 20px 0;">
                 <a href="https://amblerbeerco.com" target="_blank"><img
-                        src="https://ivanhurt.dev/portfolio/02/ambler-beer-logo.png" alt="Ambler Beer logo" width="150"
+                        src="https://ivanhurt.dev/projects/02/ambler-beer-logo.png" alt="Ambler Beer logo" width="150"
                         height="150" border="0" style="border-radius: 8px; border-bottom: 1px blue dotted;"></a>
             </td>
         </tr>
@@ -121,9 +121,9 @@
             <td style="padding: 0 15px 0 15px; background-color: white; border-bottom: 2px #48799d dotted;">
                 <table width="100%" style="border-spacing: 0;" role="presentation">
                     <tr>
-                        <td style="padding: 0; text-align: left;" ">               
+                        <td style="padding: 0; text-align: left;">
                         <p>Total</p>
-                     </td>                              
+                     </td>
                   <td style=" padding: 0; text-align: right;">
                             <p style="font-weight: 700;">$34.00</p>
                         </td>
@@ -132,7 +132,7 @@
             </td>
         </tr>
         <tr>
-            <td style="padding: 0 15px 0 15px; background-color: white; ">
+            <td style="padding: 0 15px 0 15px; background-color: white;">
                 <table width="100%" style="border-spacing: 0;" role="presentation">
                     <tr>
                         <td style="padding: 0;text-align: left;">
